--- a/Messenger2/Site.Master
+++ b/Messenger2/Site.Master
@@ -17,6 +17,8 @@
 
 </head>
 <body>
+    <asp:HiddenField ID="UserName" runat="server" />
+    <asp:HiddenField ID="UserNameMobile" runat="server" />
     <script type="text/javascript">
         Notification.requestPermission().then(function (result) {
             if (result === 'denied') {
@@ -73,6 +75,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                     </ul>
+                    
                     <p class="nav navbar-text navbar-right">Hello, <asp:LoginName runat="server" />!</p>
                 </div>
             </div>
